choose plan and header mobile

--- a/app/index-solid.html
+++ b/app/index-solid.html
@@ -55,6 +55,9 @@
               <a href=""><li>plan saya</li></a>
               <a class="open--login-head"><li><button class="btn transparent small">login</button></li></a>
             </ul>
+            <div class="header-hamburger" onclick="openMenuMobile()">
+              <span class="fa fa-bars"></span>
+            </div>
           </div>
       </div>
     </header>
@@ -131,6 +134,29 @@
         </div>
       </div>
     </footer>
+
+    <div class="sidemenu">
+      <div class="sidemenu__container">
+         <div class="sidemenu__head relative">
+            <img class="svg-image" src="images/logo/logo-dark.svg" alt="Setrip logo">
+            <span class="fa fa-close sidemenu__close" onclick="closeMenuMobile()"></span>
+          </div>
+          <div class="sidemenu__list">
+            <div class="sidemenu__menu">
+              <a href="#">ATRIKEL</a>
+            </div>
+            <div class="sidemenu__menu">
+              <a href="#">BANTUAN</a>
+            </div>
+            <div class="sidemenu__menu">
+              <a href="#">PLAN SAYA</a>
+            </div>
+            <div class="sidemenu__menu">
+              <a href="#">LOGIN/REGISTER</a>
+            </div>
+          </div>
+      </div>
+    </div>
 
     <div id="general--modal" class="general--modal">
       <div class="modal-container panel panel-default">
