--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,9 @@
                 </div>
               </div>
             </ul>
+            <div class="header-hamburger" onclick="openMenuMobile()">
+              <span class="fa fa-bars"></span>
+            </div>
           </div>
       </div>
     </header>
@@ -143,6 +146,37 @@
         </div>
       </div>
     </footer>
+
+    <div class="sidemenu">
+      <div class="sidemenu__container">
+         <div class="sidemenu__head relative">
+            <img class="svg-image" src="images/logo/logo-dark.svg" alt="Setrip logo">
+            <span class="fa fa-close sidemenu__close" onclick="closeMenuMobile()"></span>
+          </div>
+          <div class="sidemenu__list">
+            <div class="sidemenu__menu sidemenu__menuprofile">
+              <a href="#">
+                <span class="header__profile">
+                  <img src="images/guide.jpg" alt="profile-pict" />
+                  <span>Wikan</span>
+                </span>
+              </a>
+            </div>
+            <div class="sidemenu__menu">
+              <a href="#">ATRIKEL</a>
+            </div>
+            <div class="sidemenu__menu">
+              <a href="#">BANTUAN</a>
+            </div>
+            <div class="sidemenu__menu">
+              <a href="#">PLAN SAYA</a>
+            </div>
+            <div class="sidemenu__menu">
+              <a href="#">LOGOUT</a>
+            </div>
+          </div>
+      </div>
+    </div>
 
     <div id="general--modal" class="general--modal">
       <div class="modal-container panel panel-default">
