--- a/app/index-solid.html
+++ b/app/index-solid.html
@@ -73,15 +73,15 @@
             </div>
           </div>
           <div class="footer-body row">
-            <div class="col-sm-2">
+            <div class="col-md-2">
               <ul>
                 <li>ABOUT SET TRIP</li>
-                <a href=""><li>ABOUT US</li></a>
-                <a href=""><li>CONTACT US</li></a>
-                <a href=""><li>TERMS &amp; CONDITION</li></a>
+                <a href=""><li>JOIN US</li></a>
+                <a href=""><li>CAREERS</li></a>
+                <a href=""><li>BLOG</li></a>
               </ul>
             </div>
-            <div class="col-sm-2">
+            <div class="col-md-2">
               <ul>
                 <li>EXPLORE</li>
                 <a href=""><li>ABOUT US</li></a>
@@ -89,18 +89,18 @@
                 <a href=""><li>TERMS &amp; CONDITION</li></a>
               </ul>
             </div>
-            <div class="col-sm-2">
+            <div class="col-md-2">
               <ul>
                 <li>CUSTOMER SERVICE</li>
-                <a href=""><li>ABOUT US</li></a>
-                <a href=""><li>CONTACT US</li></a>
-                <a href=""><li>TERMS &amp; CONDITION</li></a>
+                <a><li><span class="fa fa-clock-o"></span> 08.00 - 23.00</li></a>
+                <a><li><span class="fa fa-phone"></span> 084432444322</li></a>
+                <a><li><span class="fa fa-envelope-o"></span> cs@setrip.co.id</li></a>
               </ul>
             </div>
-            <div class="col-sm-2">
+            <div class="col-md-2">
 
             </div>
-            <div class="col-sm-4 tl">
+            <div class="col-md-4 tl">
               <ul>
                 <li>STAY INFORMED</li>
                 <li class="form-group transparent-form">
