404 and maintenance pages

--- a/app/maintenance.html
+++ b/app/maintenance.html
@@ -86,10 +86,9 @@
     </header>
     <div class="error">
         <div class="error_wrapper text-center">
-            <img src="./images/icon/404.svg" alt="404 icon" />
-            <h1>Looks like you got lost</h1>
-            <p>The page you were looking for doesn’t exist. You may have mistyped the address or the page have been moved</p>
-            <button class="btn btn--orange btn--medium">BACK TO SAFETY</button>
+            <img src="./images/icon/maintenance.svg" alt="maintenance icon" />
+            <h1>Under Maintenance</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit et vix postea hendrerit sadipscing Aenean eu leo quam.</p>
         </div>
     </div>
     <footer>
@@ -494,8 +493,8 @@
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
                 (function (b, o, i, l, e, r) {
-                b.GoogleAnalyticsObject = l; b[l] || (b[l] =
-                    function () { (b[l].q = b[l].q || []).push(arguments) }); b[l].l = +new Date;
+                    b.GoogleAnalyticsObject = l; b[l] || (b[l] =
+                        function () { (b[l].q = b[l].q || []).push(arguments) }); b[l].l = +new Date;
                     e = o.createElement(i); r = o.getElementsByTagName(i)[0];
                     e.src = '//www.google-analytics.com/analytics.js';
                     r.parentNode.insertBefore(e, r)
