email template and 404 image change

--- a/app/404.html
+++ b/app/404.html
@@ -86,7 +86,7 @@
     </header>
     <div class="error">
         <div class="error_wrapper text-center">
-            <img src="./images/icon/404.svg" alt="404 icon" />
+            <img src="./images/icon/settrip_404.png" alt="404 icon" />
             <h1>Looks like you got lost</h1>
             <p>The page you were looking for doesn’t exist. You may have mistyped the address or the page have been moved</p>
             <button class="btn btn--orange btn--medium">BACK TO SAFETY</button>
